--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "idb": "^2.1.3",
     "install": "^0.13.0",
-    "npm": "^6.14.8"
+    "npm": "^6.14.8",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "eslint": "^7.11.0",
